--- a/relationships/templates/relationships/confirm.html
+++ b/relationships/templates/relationships/confirm.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
 {% load i18n %}
 
+{% block title %}{% if not add %}{% trans "No longer" %} {% endif %}{{ status.verb|capfirst }} {{ to_user.username }}?{% endblock %}
+
 {% block content %}
-  <h1>{% trans "Really?" %}</h1>
-  <form method="post">
-    <input type="submit" value="{% trans "Yes" %}" />
+  <p>{% if not add %}{% trans "No longer" %} {% endif %}{{ status.verb|capfirst }} {{ to_user.username }}?</p>
+  <form method="post" action="">
+    {{ form.as_table }}
+    <tr>
+      <th></th>
+      <td><input type="submit" value="Confirm" /></td>
+    </tr>
   </form>
 {% endblock %}
