--- a/relationships/templates/relationships/confirm.html
+++ b/relationships/templates/relationships/confirm.html
@@ -9,7 +9,7 @@
     {{ form.as_table }}
     <tr>
       <th></th>
-      <td><input type="submit" value="Confirm" /></td>
+      <td><input type="submit" value="{% trans "Confirm" %}" /></td>
     </tr>
   </form>
 {% endblock %}
