--- a/relationships/templates/relationships/success.html
+++ b/relationships/templates/relationships/success.html
@@ -3,6 +3,6 @@
 
 {% block content %}
   <h1>{% trans "Success" %}</h1>
-  <p>You are {% if add %}now{% else %}no longer{% endif %} {{ status.from_slug }} {{ to_user.username }}</p>
-  <p><a href="{{ to_user.get_absolute_url }}">{{ to_user.username }}'s profile</a></p>
+  <p>{% trans "You are " %}{% if add %}{% trans "now" %}{% else %}{% trans "no longer" %}{% endif %} {{ status.from_slug }} {{ to_user.username }}</p>
+  <p><a href="{{ to_user.get_absolute_url }}">{% blocktrans with to_user.username as to_user_username %}{{ to_user_username }}'s profile{% endblocktrans %}</a></p>
 {% endblock %}
